fix overflow when resizing

--- a/src/style.css
+++ b/src/style.css
@@ -66,7 +66,6 @@ nav button:hover {
     border-image: linear-gradient(
         to right, transparent, var(--light-blue-button-border) 50%, transparent
     ) 1;
-    /* background-size: cover; */
 }
 
 nav button[selected] {
@@ -75,28 +74,21 @@ nav button[selected] {
 
 
 #content {
-    width: 80%;
-    height: 100vh;
+    width: 90%;
+    min-width: 400px;
     margin: 0 auto;
-
+    min-height: 80vh;
     border: 4px ridge var(--brown-border);
     border-radius: 6px;
-    /* border-style: ridge; */
 
     background-color: var(--blue-background);
     backdrop-filter: blur(10px);
-    overflow: visible;
+    overflow: hidden;
 
-    /* display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 5em; */
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 500px));
-    grid-template-rows: repeat(auto-fit, minmax(300px, 300px));
-    gap: 5em;
-    justify-content: center;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    gap: 2em;
+    justify-items: center;
 }
 
 
@@ -104,8 +96,8 @@ nav button[selected] {
     background-color: var(--dark-blue-background);
     padding: 1em;
     border-radius: 8px;
-
-    min-width: 400px;
+    height: fit-content;
+    width: fit-content;
     display: grid;
     grid-template-columns: 74px auto;
     grid-template-rows: 74px auto;
@@ -146,7 +138,7 @@ nav button[selected] {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
+    max-height: 100px;
 }
 
 .card .price {
@@ -155,7 +147,6 @@ nav button[selected] {
 }
 
 .card .gold-img {
-    /* display: inline-block; */
     width: 17px;
     height: 20px;
 }
